# Rgrib2

./: .gitignore  DESCRIPTION  INDEX  NAMESPACE  README  README.md  cleanup  configure  configure.ac
R/: Gdec.R  Gdomain.R  Genc.R  Ggrid.R  Ghandle.R  Gindex.R  Ginfo.R  Gmeta.R  Gopen.R  Rgrib.R  zzz.R
data/: KMItab228.csv  N128.txt  N160.txt  N256.txt  N512.txt  N640.txt  N80.txt  WMOtable001.csv  chmitab001.csv  dwdtab002.csv  dwdtab201.csv  dwdtab202.csv  dwdtab203.csv  dwdtab204.csv  dwdtab205.csv  ectable128.csv  ectable129.csv  ectable130.csv  ectable131.csv  ectable140.csv  ectable150.csv  ectable160.csv  ectable170.csv  ectable180.csv  extratab.csv  extratab2.csv  hirlam001.csv  hirlam253.csv  ncepopn.csv  ncepreanal.csv  specialnames.csv  tablist.csv
docs/: 404.html  LICENSE.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/reference/: GRIBhandle.html  Gcreate.html  Gdec.html  Gdescribe.html  Gdomain.html  Gfind.html  Ginfo.html  Glocate.html  Gmod.html  Gopen.html  Gwrite.html  gaussian.html  grib_raw_split.html  gribtables.html  index.html
inst/: COPYING
inst/definitions/grib1/localConcepts/ebum/: name.def  paramId.def  shortName.def  units.def
man/: GRIBhandle.Rd  Gcreate.Rd  Gdec.Rd  Gdescribe.Rd  Gdomain.Rd  Gfind.Rd  Ghandle.Rd  Ginfo.Rd  Glocate.Rd  Gmod.Rd  Gopen.Rd  Gwrite.Rd  gaussian.Rd  grib_raw_split.Rd  gribtables.Rd
src/: .goutputstream-2KUGPV  .goutputstream-ENOPYV  Makevars  Makevars.in  encode.c  fast_decode.c  fast_index.c  handles.c  index.c  parse_fast.c.notyet  position_index.c  rgrib.c  rgrib.h
